--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.example.snoker.view.fragment.MainFragment" />
+            type="com.example.snoker.view.main.fragment.MainFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,7 +14,6 @@
         android:layout_height="match_parent"
         android:background="#f4f4f4"
         tools:context=".MainFragment">
-
 
         <ImageView
             android:id="@+id/backGroundImage"
@@ -286,5 +285,95 @@
             android:textSize="17sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sectionImage" />
+
+        <ImageView
+            android:id="@+id/levelView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/section_2_bg"
+            app:layout_constraintStart_toStartOf="@+id/levelText"
+            app:layout_constraintTop_toBottomOf="@+id/levelText" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:fontFamily="@font/noto_sans_kr_bold"
+            android:gravity="center_horizontal"
+            android:letterSpacing="-0.05"
+            android:textColor="#3c3c3c"
+            android:textSize="14sp"
+            android:text="폐 기능이 30% 향상되고 있어요."
+            app:layout_constraintEnd_toEndOf="@+id/levelView"
+            app:layout_constraintStart_toStartOf="@+id/levelView"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/levelView"
+            app:layout_constraintEnd_toEndOf="@+id/levelView"
+            app:srcCompat="@drawable/see_detail_2" />
+
+        <TextView
+            android:id="@+id/cheerText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/noto_sans_kr_bold"
+            android:gravity="center_horizontal"
+            android:includeFontPadding="false"
+            android:textSize="17sp"
+            android:textColor="#3c3c3c"
+            android:letterSpacing="-0.06"
+            android:text="실시간 랜덤 응원 한마디"
+            app:layout_constraintStart_toStartOf="@+id/levelView"
+            app:layout_constraintTop_toBottomOf="@+id/levelView" />
+
+        <TextView
+            android:id="@+id/cheerView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/section_3_bg"
+            app:layout_constraintStart_toStartOf="@+id/cheerText"
+            app:layout_constraintTop_toBottomOf="@+id/cheerText" />
+
+        <ImageView
+            android:id="@+id/seeDetail2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/cheerView"
+            app:layout_constraintEnd_toEndOf="@+id/cheerView"
+            app:srcCompat="@drawable/see_detail_2" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/levelView"
+            app:layout_constraintEnd_toEndOf="@+id/levelView"
+            app:layout_constraintStart_toStartOf="@+id/levelView"
+            app:srcCompat="@drawable/below" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="52dp"
+            app:layout_constraintBottom_toBottomOf="@+id/levelView"
+            app:layout_constraintEnd_toEndOf="@+id/levelView"
+            app:layout_constraintStart_toStartOf="@+id/levelView"
+            app:srcCompat="@drawable/above" />
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
