--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -9,6 +9,13 @@
         />
 
     <item
+        android:id="@+id/board"
+        android:enabled="true"
+        android:icon="@drawable/icon_progress"
+        android:title="board"
+        android:gravity="center_horizontal"
+        />
+    <item
         android:id="@+id/progress"
         android:enabled="true"
         android:icon="@drawable/icon_progress"
