Revert "Update snoker app"
This reverts commit 9b6224753d793721543b0e4947554affbb50df92.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.example.snoker.view.main.viewmodel.MainViewModel" />
+            type="com.example.snoker.view.main.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
