--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -7,6 +7,13 @@
         android:title="main"
         android:gravity="center"
         />
+    <item
+        android:id="@+id/board"
+        android:enabled="true"
+        android:icon="@drawable/icon_progress"
+        android:title="board"
+        android:gravity="center_horizontal"
+        />
 
     <item
         android:id="@+id/progress"
