--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -46,14 +46,15 @@
 
         <ImageView
             android:id="@+id/settingImage"
-            android:layout_width="11dp"
-            android:layout_height="11dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
+            android:background="@drawable/icon_setting"
             app:layout_constraintBottom_toTopOf="@+id/introText"
             app:layout_constraintEnd_toStartOf="@+id/idText"
             app:layout_constraintTop_toTopOf="@+id/idText"
-            app:srcCompat="@drawable/icon_setting" />
+            />
 
         <ImageView
             android:id="@+id/dayImage"
