--- a/app/src/main/res/layout/post_list_item.xml
+++ b/app/src/main/res/layout/post_list_item.xml
@@ -4,11 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/talkBoxText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:layout_marginLeft="2dp"
@@ -73,15 +73,16 @@
 
     <ImageView
         android:id="@+id/lineImage"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:background="@drawable/line"
         app:layout_constraintEnd_toEndOf="@+id/createAtText"
+        app:layout_constraintStart_toStartOf="@+id/smoingBanText"
         app:layout_constraintTop_toBottomOf="@+id/userNickNameText" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/postText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
