Add board fragment edit text

--- a/app/src/main/res/layout/post_list_item.xml
+++ b/app/src/main/res/layout/post_list_item.xml
@@ -10,13 +10,14 @@
         android:id="@+id/talkBoxText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/talk_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,9 +25,9 @@
         android:id="@+id/smoingBanText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="12dp"
         android:includeFontPadding="false"
         android:letterSpacing="-0.06"
         android:lineSpacingExtra="0dp"
@@ -42,7 +43,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="4dp"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
         android:letterSpacing="-0.06"
@@ -52,7 +52,7 @@
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@+id/smoingBanText"
         app:layout_constraintStart_toEndOf="@+id/smoingBanText"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/smoingBanText" />
 
     <TextView
         android:id="@+id/createAtText"
@@ -85,7 +85,12 @@
         android:id="@+id/postText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:gravity="center_horizontal"
         android:includeFontPadding="false"
